# icfp_2020

./: .gitignore  CMakeLists.txt  ap_test.go  c_test.go  compile.sh  dem.py  dem_test.go  div_test.go  eq_test.go  galaxy.parsed.txt  galaxy.txt  inc_test.go  k_test.go  lt_test.go  mod_test.go  neg_test.go  parse.cpp  product_test.go  run.go  run.py  s_test.go  send.py  sum_test.go
app/: main.cpp  task.h  tokens.h  util.h
app/appliers/: cons.h
